<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicom</name>
  <version>0.0.0</version>
  <description>Vehicle Communication</description>
  <maintainer email="zhi.wang@tier4.jp">Zhi Wang</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>tier4_rtc_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>udp_driver</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
